# capstone-project-team-1

./: .env.example  .gitignore  .kitignore  1.md  CLI_USAGE.md  Ollama.md  README.md  alembic.ini  artifactminer.db  artifactminer.db.bak  debug_test.py  demo.py  file.json  pyproject.toml  report.json  resume.md  resume_output.json  resume_output.md  resume_output_lfm2-2.6b-q8.json  resume_output_lfm2-2.6b-q8.md  resume_output_lfm2.5-1.2B_instruct_bf16.json  resume_output_lfm2.5-1.2b-bf16.json  resume_output_lfm2_exp_q8.md  resume_output_lfm2_q8.md  resume_output_qwen3-4b-q3.md  resume_output_qwen3-4b-q4.md  telemetry-id  test.json  test_models.py  verify_local_llm.py
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: LOCAL_LLM_API_ISSUES_PLAN.md  OPENTUI_MIGRATION_PLAN.md  milestone-3-html-generation.md  opentui-migration.md
alembic/: env.py
alembic/versions/: 0fb88330df12_merge_portfolio_id_migration.py  172d4f4751be_add_llm_model_to_consents.py  1b366daaa88a_add_representation_prefs_table.py  31ea0eb0fa88_merge_all_heads.py  3b3f297185db_add_milestone_1_schema.py  7a1d3965e0ef_add_skill_proficiency_and_evidence.py  83cec4db1e25_merge_skills_schema_heads.py  85f98443ddf4_add_health_score_to_repo_stats.py  9b4e55b3f8c4_add_thumbnail_url_to_repo_stats.py  a5f7c2e91d4b_add_portfolio_id_to_uploaded_zips.py  b1f150021a3d_add_project_path_to_repo_stats_and_user_.py  b30abc89d0a8_add_cascade_and_relationships_to_new_.py  cb8c3f3b2f3a_add_user_project_skills_table.py  d4a9e2f17c61_add_user_role_to_user_repo_stats.py  ed979e56c446_add_project_evidence_table.py
demo/: __init__.py  api.py  components.py  keyboard.py  requirements.py  theme.py
docs/: RESUME_V3_GUIDE.md  RESUME_V3_PIPELINE.md  context-engineering-plan.md  llm-cpp-analysis-proposal.md  llm-design-history.md  llm-infrastructure-evolution.md  llm-runtime-evolution.md  local-llm-api-migration-guide.md  local-llm-opentui-migration-guide.md  local-llm-research.md  local-llm-runtime-migration-guide.md  local-llm-service-migration-guide.md  ollama-benchmark.md  ollama-metrics.md  plan.md  resume-v3-architecture.md  resume-v3-usage.md
local-v1/: llm_comparison_report.md  resume_output_lfm2.5-1.2B_instruct_bf16.md  resume_output_lfm2_exp_q8.json  resume_output_lfm2_q8.json  resume_output_qwen3_4b.json  resume_output_qwen3_4b.md  resume_output_thinking.json  resume_output_thinking.md
local-v2/: resume_output_lfm2.5-1.2b-bf16.md  resume_output_qwen2.5-coder-3b-q4-fixed.json  resume_output_qwen2.5-coder-3b-q4-fixed.md  resume_output_qwen2.5-coder-3b-q4.json  resume_output_qwen2.5-coder-3b-q4.md  resume_output_qwen3-1.7b-q8.json  resume_output_qwen3-1.7b-q8.md  resume_output_qwen3-4b-q3.json  resume_output_qwen3-4b-q4.json
opentui-react-exp/: bun.lockb  package.json  tsconfig.json
opentui-react-exp/src/: index.tsx  types.ts
plan/: 499_Project_Proposal.md
project/: requirements.txt
project/server/: README.md  __init__.py  models.py  server.py  storage.py
project/tui/: README.md  __init__.py  app.py
resume_output/: final_resume.json  final_resume.md  final_resume_no_distill.md  final_resume_with_distill.md  stage1_facts.json  stage2_draft.md
resume_output/eval/: evaluation-20260216-124226.md  (+5 more)
tests/: test_cli.py  test_deep_analysis.py  test_git_signals.py  test_imports.py  test_infra_signals.py  test_persistence.py  test_project_ranker.py  test_skill_extraction.py  test_tui_basic.py
(+435 files in other folders)
